# SimpleAndroidSDL

./: .gitignore  CMakeLists.txt  README.md  SimpleSDL2.code-workspace  TODO.md  build.gradle  link_SDL2_into_project.sh  local.properties  settings.gradle  unlink_SDL2_into_project.sh
SDL2/: build.gradle
android/: build.gradle  settings.gradle
android/SDL2/: build.gradle
android/SDL2/src/main/: AndroidManifest.xml
android/app/: build.gradle
android/app/jni/: CMakeLists.txt
android/app/jni/src/: first.cpp
app/: build.gradle
app/jni/: Application.mk  CMakeLists.txt
app/jni/src/: CMakeLists.txt  first.cpp
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
src/: 52_hello_mobile.cpp  CMakeLists.txt  first.cpp
tools-util/: enable_develop.sh  link_SDL2_into_project.sh  unlink_SDL2_into_project.sh
